crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_foreign_key.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table orders (id integer primary key, user_id integer references users(id))

-- Output:
create table orders(
  id integer primary key,
  user_id integer references users(id)
);
