crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_generated.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (a integer, b integer, c integer generated always as (a + b) stored)

-- Output:
create table t(
  a integer,
  b integer,
  c integer generated always as(a + b) stored
);
