crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_inline_comments.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- CREATE TABLE queue (
--     id INTEGER PRIMARY KEY AUTOINCREMENT, -- your payload ID
--     status TEXT NOT NULL DEFAULT 'pending',
--     lease_until INTEGER, -- unix epoch seconds
--     leased_by TEXT -- worker ID
-- )

-- Output:
create table queue(
  id INTEGER primary key autoincrement, -- your payload ID
  status TEXT not null default 'pending',
  lease_until INTEGER, -- unix epoch seconds
  leased_by TEXT -- worker ID
);
