crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_table_constraints.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (a integer, b integer, c integer, primary key (a, b), unique (c))

-- Output:
create table t(
  a integer,
  b integer,
  c integer,
  primary key(a, b),
  unique(c)
);
