crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_without_rowid.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (a integer primary key, b text) without rowid

-- Output:
create table t(
  a integer primary key,
  b text
) without ROWID;
