crates/solite-fmt/src/snapshots/solite_fmt__tests__create_temp_table.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create temp table t (a integer)

-- Output:
create temp table t(
  a integer
);
