crates/solite-fmt/src/snapshots/solite_fmt__tests__create_temp_view.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create temp view v as select a from t

-- Output:
create temp view v as
select a from t;
