crates/solite-fmt/src/snapshots/solite_fmt__tests__create_trigger_after_update.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create trigger tr_t after update on t for each row begin update audit set modified = datetime('now'); end

-- Output:
create trigger tr_t
after update on t
for each row
begin
  update audit
  set
    modified = datetime('now');
end;
