crates/solite-fmt/src/snapshots/solite_fmt__tests__create_trigger_before_insert.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create trigger tr_t before insert on t begin select 1; end

-- Output:
create trigger tr_t
before insert on t
begin
  select 1;
end;
